--- a/openassessment/templates/openassessmentblock/response/oa_response.html
+++ b/openassessment/templates/openassessmentblock/response/oa_response.html
@@ -132,7 +132,7 @@
 
                                 <ul class="list list--actions">
                                     <li class="list--actions__item">
-                                        <button type="submit" class="action action--save submission__save" aria-describedby="response__save_status__{{ xblock_id }}" disabled>
+                                        <button type="submit" class="action action--save submission__save" aria-describedby="response__save_status__{{ xblock_id }}">
                                             {% trans "Save your progress" %}
                                         </button>
 
